test/files/neg/t0903.check
<<<<<<< HEAD
t0903.scala:3: error: reassignment to val
=======
t0903.scala:3: error: value += is not a member of Int
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  x += 1
    ^
t0903.scala:4: error: reassignment to val
  x = 2
    ^
two errors found
